JSを利用してパネルが出てくるように修正。 js、CSS,HTMLの「panel」の誤字を訂正

--- a/vreco-project/public/index.html
+++ b/vreco-project/public/index.html
@@ -3,7 +3,6 @@
     <head>
         <title>vreco - Vtuberの推しツイートを支援するサイト</title>
         <link rel="stylesheet" href="style.css" type="text/css">
-        <script type="text/javascript" src="script.js"></script>
     </head>
     <body>
         <header>
@@ -12,7 +11,7 @@
         <main>
             <h1>VtuberをRECOmmendしたい</h1>
             <p>本文</p>
-            <div class="container" id="pannele"></div>
+            <div class="container" id="panel"></div>
         </main>
         <footer>ソーシャルリンクとかその辺のやつかな</footer>
 
@@ -26,5 +25,8 @@
 
 <!-- Initialize Firebase -->
 <script src="/__/firebase/init.js"></script>
+
+<script type="text/javascript" src="script.js"></script>
+ 
     </body>
 </html>
