アンケート方式に書き換え

--- a/vreco-project/public/index.html
+++ b/vreco-project/public/index.html
@@ -10,8 +10,10 @@
         </header>
         <main>
             <h1>VtuberをRECOmmendしたい</h1>
-            <p>本文</p>
+            <p>Q1</p>
             <div class="container" id="panel"></div>
+            <p>Q2</p>
+            <p id="Q2ans">第一回答で出てきます</p>
         </main>
         <footer>ソーシャルリンクとかその辺のやつかな</footer>
 
