--- a/vreco-project/public/index.html
+++ b/vreco-project/public/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>vreco - Vtuberの推しツイートを支援するサイト</title>
-        <link rel="stylesheet" href="style.css" type="text/css">
+        <link rel="stylesheet" href="style.css" > <!--type="text/css"-->
         <script type="text/javascript" src="script.js"></script>
     </head>
     <body>
@@ -14,6 +14,10 @@
             <p>本文</p>
             <div class="container" id="pannele"></div>
         </main>
+      <div>最後の質問です。</div>
+
+      
+
         <footer>ソーシャルリンクとかその辺のやつかな</footer>
 
 
