mock-upのindex作業分をマージして、誤ってマージ前に作業してた分を適用させました

--- a/vreco-project/public/index.html
+++ b/vreco-project/public/index.html
@@ -1,13 +1,16 @@
 <!doctype html>
-<html>
+<html lang="ja">
     <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>vreco - Vtuberの推しツイートを支援するサイト</title>
         <link rel="stylesheet" href="style.css" > <!--type="text/css"-->
         <script type="text/javascript" src="script.js"></script>
     </head>
     <body>
         <header>
-            <nav>パンくずリストとか、リンクとか</nav>
+            <nav class="navbar navbar-expand-sm navbar-dark fixed-top">VtuberをRECOmmendしたい -Vreco</nav>
         </header>
         <main>
             <h1>VtuberをRECOmmendしたい</h1>
@@ -18,6 +21,14 @@
               <b>推しは、推せるときに、推せる方法で、推そう！！</b>
             </p>
 
+        <main class="container">
+            <div class = " jumbotron " style = "width:30rem">
+                <h1 class = "display-4">VtuberをRECOmmendしたい！</h1>
+                <p class = "lead"></p>
+                <hr class = "my-4">
+                <p>ユーティリティクラスを使用して... </p>
+                <a class="btn btn-primary btn-lg" href="#" role="button">詳細</a>
+              </div>
             <p>Q1</p>
             <div class="container" id="panel"></div>
             <p>Q2</p>
