--- a/vreco-project/public/index.html
+++ b/vreco-project/public/index.html
@@ -5,123 +5,138 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>vreco - Vtuberの推しツイートを支援するサイト</title>
-        <link rel="stylesheet" href="style.css" > <!--type="text/css"-->
+        
+        <link rel="stylesheet" href="css/bootstrap.css">
+        <style>
+        nav>a:first-letter{
+            font-size: 2em;
+            color: #dc1d1d;
+        }
+        .themecoler{
+            color: #dc1d1d;
+        }
+        </style>
+        <!-- <link rel="stylesheet" href="style.css"> -->
         <script type="text/javascript" src="script.js"></script>
     </head>
     <body>
         <header>
-            <nav class="navbar navbar-expand-sm navbar-dark fixed-top">VtuberをRECOmmendしたい -Vreco</nav>
+            <nav class="navbar sticky-top navbar-dark bg-dark">
+                <a class="navbar-brand" href="#">
+                    <img  src="src/logo.png" width="30%" height="30%" alt="VRECO-ロゴ">
+                    <strong class="themecoler">V</strong>tuberを<strong>RECO</strong>mmendしたい -VRECO
+                </a>
+            </nav>
         </header>
+
+
         <main>
-            <h1>VtuberをRECOmmendしたい</h1>
-            <!--ユーザーが使いたくなるような冒頭の説明文-->
-            <p>たった1分、簡単な質問に答えるだけで、あなたの推しへの愛を140文字にツイートできます。<br>
-              そして、お金以外の方法で推しを支援できます。<br><br>
-              推しをフォロワーに共有することで、推しへの愛を具体的な支援に変えることができます。<br>
-              <b>推しは、推せるときに、推せる方法で、推そう！！</b>
-            </p>
+            <div class = "jumbotron jumbotron-fluid">
+                <div class="container">
+                    <h1 class = "display-4"><span class="themecoler">V</span>tuberを<span class="themecoler">RECO</span>mmendしたい！</h1>
+                    <!--ユーザーが使いたくなるような冒頭の説明文-->
+                    <hr class = "my-4">
+                    <p class = "lead">たった1分、簡単な質問に答えるだけで、あなたの推しへの愛を140文字にツイートできます。<br>
+                    そして、お金以外の方法で推しを支援できます。<br><br>
+                    推しをフォロワーに共有することで、推しへの愛を具体的な支援に変えることができます。<br>
+                    <b>推しは、推せるときに、推せる方法で、推そう！！</b>
+                    </p>
+                </div>
+            </div>
 
-        <main class="container">
-            <div class = " jumbotron " style = "width:30rem">
-                <h1 class = "display-4">VtuberをRECOmmendしたい！</h1>
-                <p class = "lead"></p>
-                <hr class = "my-4">
-                <p>ユーティリティクラスを使用して... </p>
-                <a class="btn btn-primary btn-lg" href="#" role="button">詳細</a>
-              </div>
-            <p>Q1</p>
-            <div class="container" id="panel"></div>
-            <p>Q2</p>
-            <p id="Q2ans">第一回答で出てきます</p>
-            <!--ラジオボタンを使用して選択させる -->
-            <p>Q3一般的な内面の魅力</p>
-            <input type="radio" id="passion" name="mental" value="APPLE" onchange="func1()" checked>
-            <label for="passion">情熱的</label>
-            <input type="radio" id="cool" name="mental" value="BANANA" onchange="func1()">
-            <label for="cool">クール</label>
-            <input type="radio" id="shy" name="mental" value="CHERRY" onchange="func1()">
-            <label for="shy">内気</label><br>
-            <input type="radio" id="optimist" name="mental" value="APPLE" onchange="func1()" checked>
-            <label for="optimist">楽天家</label>
-            <input type="radio" id="friendly" name="mental" value="APPLE" onchange="func1()" checked>
-            <label for="friendly">優しい</label>
-            <input type="radio" id="common" name="mental" value="APPLE" onchange="func1()" checked>
-            <label for="common">常識的</label><br>
-            <input type="radio" id="positive" name="mental" value="APPLE" onchange="func1()" checked>
-            <label for="positive">ポジティブ</label>
-            <input type="radio" id="laugh" name="mental" value="APPLE" onchange="func1()" checked>
-            <label for="laugh">笑える</label>
-            <input type="radio" id="intellectual" name="mental" value="APPLE" onchange="func1()" checked>
-            <label for="intellectual">知的</label><br>
+            <form><div class="container form-group">
+                <p>Q1</p>
+                <p>Q2</p>
+                <p id="Q2ans">第一回答で出てきます</p>
+                <!--ラジオボタンを使用して選択させる -->
+                <p>Q3一般的な内面の魅力</p>
+                <input type="radio" id="passion" name="mental" value="APPLE" onchange="func1()" checked>
+                <label for="passion">情熱的</label>
+                <input type="radio" id="cool" name="mental" value="BANANA" onchange="func1()">
+                <label for="cool">クール</label>
+                <input type="radio" id="shy" name="mental" value="CHERRY" onchange="func1()">
+                <label for="shy">内気</label><br>
+                <input type="radio" id="optimist" name="mental" value="APPLE" onchange="func1()" checked>
+                <label for="optimist">楽天家</label>
+                <input type="radio" id="friendly" name="mental" value="APPLE" onchange="func1()" checked>
+                <label for="friendly">優しい</label>
+                <input type="radio" id="common" name="mental" value="APPLE" onchange="func1()" checked>
+                <label for="common">常識的</label><br>
+                <input type="radio" id="positive" name="mental" value="APPLE" onchange="func1()" checked>
+                <label for="positive">ポジティブ</label>
+                <input type="radio" id="laugh" name="mental" value="APPLE" onchange="func1()" checked>
+                <label for="laugh">笑える</label>
+                <input type="radio" id="intellectual" name="mental" value="APPLE" onchange="func1()" checked>
+                <label for="intellectual">知的</label><br>
 
-            <p>Q4界隈的魅力</p>
-            <input type="radio" id="yangcat" name="mental2" value="APPLE" onchange="func1()" checked>
-            <label for="yangcat">陽キャ</label>
-            <input type="radio" id="nerd" name="mental2" value="BANANA" onchange="func1()">
-            <label for="nerd">陰キャ</label>
-            <input type="radio" id="sharp" name="mental2" value="CHERRY" onchange="func1()">
-            <label for="sharp">とんがっている</label><br>
-            <input type="radio" id="tsundere" name="mental2" value="APPLE" onchange="func1()" checked>
-            <label for="tsundere">ツンデレ</label>
-            <input type="radio" id="yandere" name="mental2" value="APPLE" onchange="func1()" checked>
-            <label for="yandere">ヤンデレ</label>
-            <input type="radio" id="kuudere" name="mental2" value="APPLE" onchange="func1()" checked>
-            <label for="kuudere">クーデレ</label><br>
-            <input type="radio" id="neatness" name="mental2" value="APPLE" onchange="func1()" checked>
-            <label for="neatness">清楚</label>
-            <input type="radio" id="neatnesstrue" name="mental2" value="APPLE" onchange="func1()" checked>
-            <label for="neatnesstrue">清楚(真)</label>
-            <input type="radio" id="sensitive" name="mental2" value="APPLE" onchange="func1()" checked>
-            <label for="sensitive">センシティブ</label><br>
+                <p>Q4界隈的魅力</p>
+                <input type="radio" id="yangcat" name="mental2" value="APPLE" onchange="func1()" checked>
+                <label for="yangcat">陽キャ</label>
+                <input type="radio" id="nerd" name="mental2" value="BANANA" onchange="func1()">
+                <label for="nerd">陰キャ</label>
+                <input type="radio" id="sharp" name="mental2" value="CHERRY" onchange="func1()">
+                <label for="sharp">とんがっている</label><br>
+                <input type="radio" id="tsundere" name="mental2" value="APPLE" onchange="func1()" checked>
+                <label for="tsundere">ツンデレ</label>
+                <input type="radio" id="yandere" name="mental2" value="APPLE" onchange="func1()" checked>
+                <label for="yandere">ヤンデレ</label>
+                <input type="radio" id="kuudere" name="mental2" value="APPLE" onchange="func1()" checked>
+                <label for="kuudere">クーデレ</label><br>
+                <input type="radio" id="neatness" name="mental2" value="APPLE" onchange="func1()" checked>
+                <label for="neatness">清楚</label>
+                <input type="radio" id="neatnesstrue" name="mental2" value="APPLE" onchange="func1()" checked>
+                <label for="neatnesstrue">清楚(真)</label>
+                <input type="radio" id="sensitive" name="mental2" value="APPLE" onchange="func1()" checked>
+                <label for="sensitive">センシティブ</label><br>
 
-            <p>Q5行動の魅力</p>
-            <input type="radio" id="yangcat" name="action" value="APPLE" onchange="func1()" checked>
-            <label for="yangcat">努力家</label>
-            <input type="radio" id="nerd" name="action" value="BANANA" onchange="func1()">
-            <label for="nerd">コラボ</label>
-            <input type="radio" id="sharp" name="action" value="CHERRY" onchange="func1()">
-            <label for="sharp">自由奔放</label><br>
-            <input type="radio" id="tsundere" name="action" value="APPLE" onchange="func1()" checked>
-            <label for="tsundere">清楚</label>
-            <input type="radio" id="yandere" name="action" value="APPLE" onchange="func1()" checked>
-            <label for="yandere">清楚(真)</label>
-            <input type="radio" id="kuudere" name="action" value="APPLE" onchange="func1()" checked>
-            <label for="kuudere">センシティブ</label><br>
-            <input type="radio" id="neatness" name="action" value="APPLE" onchange="func1()" checked>
-            <label for="neatness">常識的</label>
-            <input type="radio" id="neatnesstrue" name="action" value="APPLE" onchange="func1()" checked>
-            <label for="neatnesstrue">几帳面</label>
-            <input type="radio" id="sensitive" name="action" value="APPLE" onchange="func1()" checked>
-            <label for="sensitive">献身的</label><br>
+                <p>Q5行動の魅力</p>
+                <input type="radio" id="yangcat" name="action" value="APPLE" onchange="func1()" checked>
+                <label for="yangcat">努力家</label>
+                <input type="radio" id="nerd" name="action" value="BANANA" onchange="func1()">
+                <label for="nerd">コラボ</label>
+                <input type="radio" id="sharp" name="action" value="CHERRY" onchange="func1()">
+                <label for="sharp">自由奔放</label><br>
+                <input type="radio" id="tsundere" name="action" value="APPLE" onchange="func1()" checked>
+                <label for="tsundere">清楚</label>
+                <input type="radio" id="yandere" name="action" value="APPLE" onchange="func1()" checked>
+                <label for="yandere">清楚(真)</label>
+                <input type="radio" id="kuudere" name="action" value="APPLE" onchange="func1()" checked>
+                <label for="kuudere">センシティブ</label><br>
+                <input type="radio" id="neatness" name="action" value="APPLE" onchange="func1()" checked>
+                <label for="neatness">常識的</label>
+                <input type="radio" id="neatnesstrue" name="action" value="APPLE" onchange="func1()" checked>
+                <label for="neatnesstrue">几帳面</label>
+                <input type="radio" id="sensitive" name="action" value="APPLE" onchange="func1()" checked>
+                <label for="sensitive">献身的</label><br>
 
-            <p>Q6配信の魅力</p>
-            <input type="radio" id="yangcat" name="delivery" value="APPLE" onchange="func1()" checked>
-            <label for="yangcat">ゲーム実況</label>
-            <input type="radio" id="nerd" name="delivery" value="BANANA" onchange="func1()">
-            <label for="nerd">歌</label>
-            <input type="radio" id="sharp" name="delivery" value="CHERRY" onchange="func1()">
-            <label for="sharp">企画</label><br>
-            <input type="radio" id="tsundere" name="delivery" value="APPLE" onchange="func1()" checked>
-            <label for="tsundere">コラボ</label>
-            <input type="radio" id="yandere" name="delivery" value="APPLE" onchange="func1()" checked>
-            <label for="yandere">ゲリラ</label>
-            <input type="radio" id="kuudere" name="delivery" value="APPLE" onchange="func1()" checked>
-            <label for="kuudere">ホラー実況</label><br>
-            <input type="radio" id="neatness" name="delivery" value="APPLE" onchange="func1()" checked>
-            <label for="neatness">耐久</label>
-            <input type="radio" id="neatnesstrue" name="delivery" value="APPLE" onchange="func1()" checked>
-            <label for="neatnesstrue">寝落ち</label>
+                <p>Q6配信の魅力</p>
+                <input type="radio" id="yangcat" name="delivery" value="APPLE" onchange="func1()" checked>
+                <label for="yangcat">ゲーム実況</label>
+                <input type="radio" id="nerd" name="delivery" value="BANANA" onchange="func1()">
+                <label for="nerd">歌</label>
+                <input type="radio" id="sharp" name="delivery" value="CHERRY" onchange="func1()">
+                <label for="sharp">企画</label><br>
+                <input type="radio" id="tsundere" name="delivery" value="APPLE" onchange="func1()" checked>
+                <label for="tsundere">コラボ</label>
+                <input type="radio" id="yandere" name="delivery" value="APPLE" onchange="func1()" checked>
+                <label for="yandere">ゲリラ</label>
+                <input type="radio" id="kuudere" name="delivery" value="APPLE" onchange="func1()" checked>
+                <label for="kuudere">ホラー実況</label><br>
+                <input type="radio" id="neatness" name="delivery" value="APPLE" onchange="func1()" checked>
+                <label for="neatness">耐久</label>
+                <input type="radio" id="neatnesstrue" name="delivery" value="APPLE" onchange="func1()" checked>
+                <label for="neatnesstrue">寝落ち</label>
 
-            <p>Q7関係性の魅力</p>
-            <input type="radio" id="yangcat" name="relation" value="APPLE" onchange="func1()" checked>
-            <label for="yangcat">てぇてぇ</label>
-            <input type="radio" id="nerd" name="relation" value="BANANA" onchange="func1()">
-            <label for="nerd">家族</label>
-            <input type="radio" id="sharp" name="relation" value="CHERRY" onchange="func1()">
-            <label for="sharp">プロレス</label><br>
-            <input type="radio" id="tsundere" name="relation" value="APPLE" onchange="func1()" checked>
-            <label for="tsundere">相棒</label>
-
+                <p>Q7関係性の魅力</p>
+                <input type="radio" id="yangcat" name="relation" value="APPLE" onchange="func1()" checked>
+                <label for="yangcat">てぇてぇ</label>
+                <input type="radio" id="nerd" name="relation" value="BANANA" onchange="func1()">
+                <label for="nerd">家族</label>
+                <input type="radio" id="sharp" name="relation" value="CHERRY" onchange="func1()">
+                <label for="sharp">プロレス</label><br>
+                <input type="radio" id="tsundere" name="relation" value="APPLE" onchange="func1()" checked>
+                <label for="tsundere">相棒</label>
+            </div></form>
         </main>
       <div>最後の質問です。</div>
 
