--- a/vreco-project/public/index.html
+++ b/vreco-project/public/index.html
@@ -17,7 +17,6 @@
         }
         </style>
         <!-- <link rel="stylesheet" href="style.css"> -->
-        <script type="text/javascript" src="script.js"></script>
     </head>
     <body>
         <header>
@@ -43,7 +42,7 @@
                 </div>
             </div>
 
-            <form class="container">
+            <form id="mainform" class="container">
                 <ol>
                     <li>
                         <div class="form-group">
@@ -172,6 +171,9 @@
 
 <!-- Initialize Firebase -->
 <script src="/__/firebase/init.js"></script>
+
+<script type="text/javascript" src="questions.js"></script>
+<script type="text/javascript" src="script.js"></script>
 
     </body>
 </html>
